fixed airbnb margin

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
    <section class="elementor-section elementor-top-section elementor-element elementor-element-19cbfed elementor-hidden-desktop elementor-hidden-tablet elementor-section-full_width elementor-section-height-min-height elementor-section-height-default elementor-section-items-middle" data-element_type="section" data-id="19cbfed" data-marvy_enable_drop_animation="false" data-marvy_enable_fancy_rotate="false" data-marvy_enable_firework_animation="false" data-marvy_enable_flying_object="false" data-marvy_enable_gradient_animation="false" data-marvy_enable_rings_animation="false" data-marvy_enable_ripples_animation="false" data-marvy_enable_snow_animation="false" data-marvy_enable_topology_animation="false" data-marvy_enable_waves_animation="false" data-particle-mobile-disabled="false" data-particle_enable="false" data-settings='{"background_background":"classic"}'>
     <div class="elementor-container elementor-column-gap-no" style="
                                   margin-bottom: -0.5em;
+                                  margin-top: -5em;
                               ">
      <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-c4a5e05" data-element_type="column" data-id="c4a5e05" data-settings='{"background_background":"classic"}'>
       <div class="elementor-widget-wrap elementor-element-populated">
@@ -821,7 +822,7 @@
     <div class="elementor-background-overlay">
     </div>
     <div class="elementor-element elementor-element-88a3775 elementor-widget elementor-widget-image" data-element_type="widget" data-id="88a3775" data-widget_type="image.default">
-     <div class="elementor-widget-container" style="margin-top: -7em;">
+     <div class="elementor-widget-container" style="margin-top: 0em;">
       <img alt="" class="attachment-large size-large wp-image-3086" decoding="async" height="399" loading="lazy" sizes="(max-width: 600px) 100vw, 600px" srcset="imagenes/10.png" width="600"/>
      </div>
     </div>
