--- a/index.html
+++ b/index.html
@@ -281,7 +281,6 @@
    <section class="elementor-section elementor-top-section elementor-element elementor-element-19cbfed elementor-hidden-desktop elementor-hidden-tablet elementor-section-full_width elementor-section-height-min-height elementor-section-height-default elementor-section-items-middle" data-element_type="section" data-id="19cbfed" data-marvy_enable_drop_animation="false" data-marvy_enable_fancy_rotate="false" data-marvy_enable_firework_animation="false" data-marvy_enable_flying_object="false" data-marvy_enable_gradient_animation="false" data-marvy_enable_rings_animation="false" data-marvy_enable_ripples_animation="false" data-marvy_enable_snow_animation="false" data-marvy_enable_topology_animation="false" data-marvy_enable_waves_animation="false" data-particle-mobile-disabled="false" data-particle_enable="false" data-settings='{"background_background":"classic"}'>
     <div class="elementor-container elementor-column-gap-no" style="
                                   margin-bottom: -0.5em;
-                                  margin-top: -5em;
                               ">
      <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-c4a5e05" data-element_type="column" data-id="c4a5e05" data-settings='{"background_background":"classic"}'>
       <div class="elementor-widget-wrap elementor-element-populated">
@@ -554,51 +553,59 @@
           Queremos que solo
           <span class="Apple-converted-space">
           </span>
-          os preocupéis en pasarlo bien, así que tenéis a vuestra disposición autobuses que os trasladarán de los hoteles
-          <span class="Apple-converted-space">
-          </span>
-          a la celebración. Cuando se acerque la fecha publicaremos los horarios.
+          os preocupéis en pasarlo bien, así que tenéis a vuestra disposición autobuses que os trasladarán de los hoteles a la celebración.</br>
+          <b>Itinerario de recogida:</b> Hacienda minerva-Hotel Nueva Mencía Subética-Complejo Turístico Fuente de la Salud
+
          </p>
         </div>
        </div>
        <div class="elementor-element elementor-element-04b8055 elementor-widget elementor-widget-heading" data-element_type="widget" data-id="04b8055" data-widget_type="heading.default">
         <div class="elementor-widget-container">
          <h2 class="elementor-heading-title elementor-size-default">
-          Ida: ??:?? h.
+          Ida: 12:15 h.
+         </h2>
+        </div>
+       </div>
+       <div class="elementor-element elementor-element-3eebe67 elementor-widget elementor-widget-heading" data-element_type="widget" data-id="3eebe67" data-widget_type="heading.default">
+        <div class="elementor-widget-container">
+         <h2 class="elementor-heading-title elementor-size-default">
+          Vuelta: 21:30 h.
          </h2>
         </div>
        </div>
        <div class="elementor-element elementor-element-3eebe67 elementor-widget elementor-widget-heading" data-element_type="widget" data-id="3eebe67" data-widget_type="heading.default" style="
-                        margin-bottom: 3em;
-                    ">
-        <div class="elementor-widget-container">
-         <h2 class="elementor-heading-title elementor-size-default">
-          Vuelta: ??:?? h.
-         </h2>
-        </div>
-       </div>
+       margin-bottom: 3em;
+   ">
+<div class="elementor-widget-container">
+<h2 class="elementor-heading-title elementor-size-default">
+Vuelta: 00:00 h.
+</h2>
+</div>
+</div>
        <div class="elementor-element elementor-element-111d47a elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="111d47a" data-widget_type="text-editor.default" style="margin-bottom : 6em">
         <div class="elementor-widget-container">
          <p class="p1">
           <span class="Apple-converted-space">
            También contamos con servicio de taxi.
            <br/>
-           Facilitaremos el teléfono mas adelante
+           <b>Número de teléfono:</b> 649719945 (Felipe)</br>
+           <b>Tarifa dia</b>: Hacienda Minerva 20€, Hotel Nueva Mencía Subética 15€</br>
+           <b>Tarifa noche:</b> incremento de 5€ al precio de arriba.
           </span>
          </p>
         </div>
        </div>
-       <div class="elementor-element elementor-element-4b327879 elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="4b327879" data-widget_type="text-editor.default">
+       <!-- <div class="elementor-element elementor-element-4b327879 elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="4b327879" data-widget_type="text-editor.default">
         <div class="elementor-widget-container">
          <p class="p1">
           <span style="vertical-align: inherit;">
            <span style="vertical-align: inherit;">
-            <!-- Facilitaremos el telefono mas adelante -->
+            Facilitaremos el telefono mas adelante
            </span>
           </span>
          </p>
         </div>
-       </div>
+       </div> -->
       </div>
      </div>
     </div>
@@ -638,6 +645,15 @@
          <h2 class="elementor-heading-title elementor-size-default">
           Hacienda Minerva
          </h2>
+        </div>
+       </div>
+       <div class="elementor-element elementor-element-83a9e6a elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="83a9e6a" data-widget_type="text-editor.default" style="margin-top: 1.75em;">
+        <div class="elementor-widget-container">
+         <p class="p1" style="font-size: 18px;">
+<b>HABITACIONES DOBLES:</b> 79€ la noche solo alojamiento</br>
+<b>HABITACIÓN CUÁDRUPLE:</b> 149€ la noche solo alojamiento</br>
+<b>HABITACIÓN JUNIOR SUITE:</b> 99€ la noche solo alojamiento
+         </p>
         </div>
        </div>
        <div class="elementor-element elementor-element-22d9ee01 elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button animated bounceIn" data-element_type="widget" data-id="22d9ee01" data-settings='{"_animation_mobile":"bounceIn"}' data-widget_type="button.default">
@@ -822,7 +838,7 @@
     <div class="elementor-background-overlay">
     </div>
     <div class="elementor-element elementor-element-88a3775 elementor-widget elementor-widget-image" data-element_type="widget" data-id="88a3775" data-widget_type="image.default">
-     <div class="elementor-widget-container" style="margin-top: 0em;">
+     <div class="elementor-widget-container" style="margin-top: -7em;">
       <img alt="" class="attachment-large size-large wp-image-3086" decoding="async" height="399" loading="lazy" sizes="(max-width: 600px) 100vw, 600px" srcset="imagenes/10.png" width="600"/>
      </div>
     </div>
