Prettify index.html

--- a/index.html
+++ b/index.html
@@ -553,9 +553,11 @@
           Queremos que solo
           <span class="Apple-converted-space">
           </span>
-          os preocupéis en pasarlo bien, así que tenéis a vuestra disposición autobuses que os trasladarán de los hoteles a la celebración.</br>
-          <b>Itinerario de recogida:</b> Hacienda minerva-Hotel Nueva Mencía Subética-Complejo Turístico Fuente de la Salud
-
+          os preocupéis en pasarlo bien, así que tenéis a vuestra disposición autobuses que os trasladarán de los hoteles a la celebración.
+          <b>
+           Itinerario de recogida:
+          </b>
+          Hacienda minerva-Hotel Nueva Mencía Subética-Complejo Turístico Fuente de la Salud
          </p>
         </div>
        </div>
@@ -576,36 +578,34 @@
        <div class="elementor-element elementor-element-3eebe67 elementor-widget elementor-widget-heading" data-element_type="widget" data-id="3eebe67" data-widget_type="heading.default" style="
        margin-bottom: 3em;
    ">
-<div class="elementor-widget-container">
-<h2 class="elementor-heading-title elementor-size-default">
-Vuelta: 00:00 h.
-</h2>
-</div>
-</div>
+        <div class="elementor-widget-container">
+         <h2 class="elementor-heading-title elementor-size-default">
+          Vuelta: 00:00 h.
+         </h2>
+        </div>
+       </div>
        <div class="elementor-element elementor-element-111d47a elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="111d47a" data-widget_type="text-editor.default" style="margin-bottom : 6em">
         <div class="elementor-widget-container">
          <p class="p1">
           <span class="Apple-converted-space">
            También contamos con servicio de taxi.
            <br/>
-           <b>Número de teléfono:</b> 649719945 (Felipe)</br>
-           <b>Tarifa dia</b>: Hacienda Minerva 20€, Hotel Nueva Mencía Subética 15€</br>
-           <b>Tarifa noche:</b> incremento de 5€ al precio de arriba.
+           <b>
+            Número de teléfono:
+           </b>
+           649719945 (Felipe)
+           <b>
+            Tarifa dia
+           </b>
+           : Hacienda Minerva 20€, Hotel Nueva Mencía Subética 15€
+           <b>
+            Tarifa noche:
+           </b>
+           incremento de 5€ al precio de arriba.
           </span>
          </p>
         </div>
        </div>
-       <!-- <div class="elementor-element elementor-element-4b327879 elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="4b327879" data-widget_type="text-editor.default">
-        <div class="elementor-widget-container">
-         <p class="p1">
-          <span style="vertical-align: inherit;">
-           <span style="vertical-align: inherit;">
-            Facilitaremos el telefono mas adelante
-           </span>
-          </span>
-         </p>
-        </div>
-       </div> -->
       </div>
      </div>
     </div>
@@ -650,9 +650,18 @@ Vuelta: 00:00 h.
        <div class="elementor-element elementor-element-83a9e6a elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="83a9e6a" data-widget_type="text-editor.default" style="margin-top: 1.75em;">
         <div class="elementor-widget-container">
          <p class="p1" style="font-size: 18px;">
-<b>HABITACIONES DOBLES:</b> 79€ la noche solo alojamiento</br>
-<b>HABITACIÓN CUÁDRUPLE:</b> 149€ la noche solo alojamiento</br>
-<b>HABITACIÓN JUNIOR SUITE:</b> 99€ la noche solo alojamiento
+          <b>
+           HABITACIONES DOBLES:
+          </b>
+          79€ la noche solo alojamiento
+          <b>
+           HABITACIÓN CUÁDRUPLE:
+          </b>
+          149€ la noche solo alojamiento
+          <b>
+           HABITACIÓN JUNIOR SUITE:
+          </b>
+          99€ la noche solo alojamiento
          </p>
         </div>
        </div>
@@ -759,7 +768,7 @@ Vuelta: 00:00 h.
        <div class="elementor-element elementor-element-22d9ee01 elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button animated bounceIn" data-element_type="widget" data-id="22d9ee01" data-settings='{"_animation_mobile":"bounceIn"}' data-widget_type="button.default">
         <div class="elementor-widget-container" style=" display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; ">
          <div class="elementor-button-wrapper">
-          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/apartamento-loft-san-miguel.es.html?aid=1139302&label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&sid=126b09738d3ba5eb8604b73846c6c0c6&all_sr_blocks=904162102_362905983_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=3;highlighted_blocks=904162102_362905983_2_0_0;hpos=3;matching_block_id=904162102_362905983_2_0_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=904162102_362905983_2_0_0__17460;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1&#hotelTmpl" role="button" target="_blank">
+          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/apartamento-loft-san-miguel.es.html?aid=1139302&amp;label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&amp;sid=126b09738d3ba5eb8604b73846c6c0c6&amp;all_sr_blocks=904162102_362905983_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=3;highlighted_blocks=904162102_362905983_2_0_0;hpos=3;matching_block_id=904162102_362905983_2_0_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=904162102_362905983_2_0_0__17460;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1" role="button" target="_blank">
            <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">
              1
@@ -768,7 +777,7 @@ Vuelta: 00:00 h.
           </a>
          </div>
          <div class="elementor-button-wrapper">
-          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/casa-los-silos.es.html?aid=1139302&label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&sid=126b09738d3ba5eb8604b73846c6c0c6&all_sr_blocks=767436801_334317157_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=4;highlighted_blocks=767436801_334317157_2_0_0;hpos=4;matching_block_id=767436801_334317157_2_0_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=767436801_334317157_2_0_0__11664;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1&#hotelTmpl" role="button" target="_blank">
+          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/casa-los-silos.es.html?aid=1139302&amp;label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&amp;sid=126b09738d3ba5eb8604b73846c6c0c6&amp;all_sr_blocks=767436801_334317157_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=4;highlighted_blocks=767436801_334317157_2_0_0;hpos=4;matching_block_id=767436801_334317157_2_0_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=767436801_334317157_2_0_0__11664;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1" role="button" target="_blank">
            <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">
              2
@@ -777,7 +786,7 @@ Vuelta: 00:00 h.
           </a>
          </div>
          <div class="elementor-button-wrapper">
-          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/apartamento-san-miguel-baena.es.html?aid=1139302&label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&sid=126b09738d3ba5eb8604b73846c6c0c6&all_sr_blocks=999894801_372811232_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=5;highlighted_blocks=999894801_372811232_2_0_0;hpos=5;matching_block_id=999894801_372811232_2_0_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=999894801_372811232_2_0_0__15300;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1&#hotelTmpl" role="button" target="_blank">
+          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/apartamento-san-miguel-baena.es.html?aid=1139302&amp;label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&amp;sid=126b09738d3ba5eb8604b73846c6c0c6&amp;all_sr_blocks=999894801_372811232_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=5;highlighted_blocks=999894801_372811232_2_0_0;hpos=5;matching_block_id=999894801_372811232_2_0_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=999894801_372811232_2_0_0__15300;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1" role="button" target="_blank">
            <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">
              3
@@ -808,7 +817,7 @@ Vuelta: 00:00 h.
           </a>
          </div>
          <div class="elementor-button-wrapper">
-          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/maison-calme-gymnase-salle-bain-terrasse-prives.es.html?aid=1139302&label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&sid=126b09738d3ba5eb8604b73846c6c0c6&all_sr_blocks=761786603_333313472_0_1_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=6;highlighted_blocks=761786603_333313472_0_1_0;hpos=6;matching_block_id=761786603_333313472_0_1_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=761786603_333313472_0_1_0__11520;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1&#_" role="button" target="_blank">
+          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/maison-calme-gymnase-salle-bain-terrasse-prives.es.html?aid=1139302&amp;label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&amp;sid=126b09738d3ba5eb8604b73846c6c0c6&amp;all_sr_blocks=761786603_333313472_0_1_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=6;highlighted_blocks=761786603_333313472_0_1_0;hpos=6;matching_block_id=761786603_333313472_0_1_0;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=761786603_333313472_0_1_0__11520;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1" role="button" target="_blank">
            <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">
              6
@@ -817,7 +826,7 @@ Vuelta: 00:00 h.
           </a>
          </div>
          <div class="elementor-button-wrapper">
-          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/apartamento-turistico-leo-baena.html?aid=1139302&label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&sid=126b09738d3ba5eb8604b73846c6c0c6;checkin=2023-11-24;checkout=2023-11-26;room1=A,A;homd=1;srpvid=60d3654279a30294;srepoch=1694788115;atlas_src=hp_iw_btn" role="button" target="_blank">
+          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/apartamento-turistico-leo-baena.html?aid=1139302&amp;label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&amp;sid=126b09738d3ba5eb8604b73846c6c0c6;checkin=2023-11-24;checkout=2023-11-26;room1=A,A;homd=1;srpvid=60d3654279a30294;srepoch=1694788115;atlas_src=hp_iw_btn" role="button" target="_blank">
            <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">
              7
@@ -826,14 +835,14 @@ Vuelta: 00:00 h.
           </a>
          </div>
          <div class="elementor-button-wrapper">
-            <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/el-balcon-deluxe.es.html?aid=1139302&label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&sid=126b09738d3ba5eb8604b73846c6c0c6&all_sr_blocks=911117501_362395884_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;hapos=2;highlighted_blocks=911117501_362395884_2_0_0;hpos=2;matching_block_id=911117501_362395884_2_0_0;no_rooms=1;req_adults=2;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=911117501_362395884_2_0_0__14200;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1&#hotelTmpl" role="button" target="_blank">
-             <span class="elementor-button-content-wrapper">
-              <span class="elementor-button-text">
-               8
-              </span>
-             </span>
-            </a>
-           </div>
+          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://www.booking.com/hotel/es/el-balcon-deluxe.es.html?aid=1139302&amp;label=baena-6iY8ZiUiiUyd7HIr1_vzPAS388416742767%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-2007851544416%3Akwd-42279073970%3Alp1005421%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293Rq0C47PRwNPxk&amp;sid=126b09738d3ba5eb8604b73846c6c0c6&amp;all_sr_blocks=911117501_362395884_2_0_0;checkin=2023-11-24;checkout=2023-11-26;dest_id=-372139;dest_type=city;dist=0;group_adults=2;hapos=2;highlighted_blocks=911117501_362395884_2_0_0;hpos=2;matching_block_id=911117501_362395884_2_0_0;no_rooms=1;req_adults=2;room1=A%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=911117501_362395884_2_0_0__14200;srepoch=1694787837;srpvid=19ab653c492d0137;type=total;ucfs=1" role="button" target="_blank">
+           <span class="elementor-button-content-wrapper">
+            <span class="elementor-button-text">
+             8
+            </span>
+           </span>
+          </a>
+         </div>
         </div>
        </div>
       </div>
