Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+W<!DOCTYPE html>
 <html lang="es">
  <head>
   <title>
@@ -653,11 +653,11 @@
           <b>
            HABITACIONES DOBLES:
           </b>
-          79€ la noche solo alojamiento
+          79€ la noche solo alojamiento<\br>
           <b>
            HABITACIÓN CUÁDRUPLE:
           </b>
-          149€ la noche solo alojamiento
+          149€ la noche solo alojamiento<\br>
           <b>
            HABITACIÓN JUNIOR SUITE:
           </b>
