--- a/index.html
+++ b/index.html
@@ -653,11 +653,11 @@
           <b>
            HABITACIONES DOBLES:
           </b>
-          79€ la noche solo alojamiento<\br>
+          79€ la noche solo alojamiento</br>
           <b>
            HABITACIÓN CUÁDRUPLE:
           </b>
-          149€ la noche solo alojamiento<\br>
+          149€ la noche solo alojamiento</br>
           <b>
            HABITACIÓN JUNIOR SUITE:
           </b>
